--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html {
     box-sizing: border-box;
-    background: #ffc600;
-    font-family: 'helvetica neue';
+    background: #ffffff;
+    font-family: 'thewitcher';
     font-size: 20px;
     font-weight: 200;
   }
@@ -38,7 +38,7 @@ html {
 
   .slide-in {
     opacity: 0;
-    transition: all .5s;
+    transition: all 1s;
   }
 
   .align-left.slide-in {
@@ -52,4 +52,76 @@ html {
   .slide-in.active {
     opacity: 1;
     transform: translateX(0%) scale(1);
+  }
+
+  .logo{
+    height: 140px;
+    width: 100%;
+    background: white;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* position: sticky;
+    top: 0; */
+    background: #fff;
+    opacity: 1;
+    z-index: 999;
+  }
+
+  .img-holder > img{
+    height: 100px;
+  }
+
+  .witcher{
+    height: 50vh;
+  }
+  .holder{
+    position: relative;
+    height: calc(100vh - 140px);
+  }
+  .content{
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%,-75%);
+    width:140px;
+    height: 100px;
+    text-align: center;
+  }
+  .scroll-content{
+    height: calc(100vh - 140px);
+    background:#f4f4f4;
+    position: relative;
+  }
+  .scroll-content > img {
+    height: 75vh;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  .scroll-content > h1 {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%,-25%);
+    color:  #666;
+  }
+  .scroll-content-two{
+    height: 100vh;
+    background:#f4f4f4;
+  }
+  .scroll-content-two > img {
+    height: 75vh;
+  }
+  .white {
+    background: white;
+  }
+  .two > img {
+    height: 60vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
   }
